# scx-manager

scx-rustlib/: Cargo.toml
